# leadsheetanalyser

./: .gitattributes  .gitignore  CHANGELOG.md  DATA.md  LICENSE  ORGANIZATION.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
data/: meta.csv
leadsheetanalyser/: __init__.py  chord_dissimilarities.py  chord_progression.py  chords.py  constants.py  data_access.py  data_processing.py  musical_systems.py  scales.py  song_distance.py  system_analysis.py
notebooks/: 00_import_jams.html  00_import_jams.qmd  01_ireal_pro_exploration.html  01_ireal_pro_exploration.qmd  02_tests_import_data.qmd
scripts/: build_corpus.py  download_data.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_chord_dissimilarities.py  test_chords.py  test_constants.py  test_data_processing.py  test_integration.py  test_scales.py  test_song_distance.py
