[project]
name = "leadsheetanalyser"
version = "0.1.0"
description = "A package for music analysis, chord processing, and harmonic analysis via modal systems and optimal transport"
authors = [
    { name = "Nicolas Klutchnikoff", email = "nicolas.klutchnikoff@univ-rennes2.fr" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3.0",
    "jams>=0.3.4",
    "music21>=6.0.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "harte-library>=0.2.0",
    "POT>=0.9.7",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["leadsheetanalyser/"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
